# boke

./: .gitignore  CMakeLists.txt
apps/: CMakeLists.txt  main.cpp
include/boke/: allocator.h  boke.h  container.h  debug_assert.h  file.h  framework.h  str_hash.h  util.h
resources/configs/: config.json
resources/configs/natvis/: hashmap.natvis  resizable_array.natvis
resources/shaders/test/: copy_srv_ps.hlsl  debug_color_4rtv_ps.hlsl  debug_color_ps.hlsl  geom_ms.glsl  materials.json  postprocess_ms.hlsl  rootsig-empty.hlsl  rootsig.hlsl  triangle_ms.hlsl
resources/tests/: config-imgui.json  config-multipass.json  config.json  formatted-config-multipass.json  materials.json  multi-pass-material-list.json  resources.json  test-material-list.json  test.json
scripts/: renderpassparser.py  shadercompiler.py
src/: CMakeLists.txt  allocator.cpp  container.cpp  dummy.cpp  file.cpp  framework.cpp  gfx.cpp  json.cpp  json.h  linear_allocator.h  str_hash.cpp  string_util.cpp  string_util.h  util.cpp
src/gfx/: .#gfx.cpp  barrier_config.cpp  barrier_config.h  core.cpp  core.h  d3d12_agility_sdk_version.cpp  d3d12_name_alias.h  d3d12_util.cpp  d3d12_util.h  descriptors.cpp  descriptors.h  descriptors_shader_visible.cpp  descriptors_shader_visible.h  gfx.cpp  imgui_util.cpp  imgui_util.h  material.cpp  material.h  render_pass_info.h  resources.cpp  resources.h  rootsig_pso.cpp  shader_compiler.cpp
tests/: CMakeLists.txt  test_example.cpp  test_str_hash.cpp
